src/tests/snapshots/protocols__core__serialize__tests__func_arg_invalid_prot.snap
---
source: src/core/serialize.rs
expression: content
---
error: Assigning to undeclared symbol: c
  ┌─ tests/misc/func_arg_invalid.prot:9:3
  │
9 │   c := b;
  │   ^ Assigning to undeclared symbol: c
